--- a/sass/utils/_spacing.scss
+++ b/sass/utils/_spacing.scss
@@ -97,6 +97,9 @@
   .u-sm-pls { padding-left: $spacer-s !important }
   .u-sm-prs { padding-right: $spacer-s !important }
 
+  .u-sm-mrn{ margin-right:  0px !important }
+  .u-sm-mln{ margin-left:  0px !important }
+
 }
 
 
