--- a/sass/components/button/_button.scss
+++ b/sass/components/button/_button.scss
@@ -66,6 +66,11 @@
   font-size: em(18);
 }
 
+.button--medium {
+  padding: em(15) em(40);
+  font-size: em(15);
+}
+
 .button--block {
   display: block;
   width: 100%;
