--- a/sass/website/_hp.scss
+++ b/sass/website/_hp.scss
@@ -5,23 +5,36 @@
         color: #2980b9; 
         font-size: 42px;
     }
-    p{
-        font-size: 39px;
-        font-weight: 600;
+
+    p {
+        font-size: 20px;
+        font-weight: 200;
     }
 
     input{
         border-radius: 4px !important;
         border: 1px solid #DBDBDB !important;
-        width: 100%;
-        height: 70px;
+        width: 75%;
+        height: 60px;
         padding-left: 10px;
     }
 
-    @media only screen and (max-width: 375px){
+    @media only screen and (max-width: 425px){
         	
-       p{font-size: 15px;}
+       p{ font-size: 15px; }
+
+       input{ width: 100%; font-size: 13px; }
 
     }
 
+}
+
+h2{
+    margin: 0 0 1.625rem 0;
+    font-family: Helvetica, sans-serif;
+    line-height: 1.25em;
+    font-weight: 200;
+    color: #4a4a4a;
+    text-rendering: optimizeLegibility;
+    font-size: 22px;
 }
