--- a/sass/utils/_spacing.scss
+++ b/sass/utils/_spacing.scss
@@ -106,6 +106,10 @@
 @media only screen and (max-width: 425px){
 
   .u-xs-ptn{padding-top:none;}
+
+  .u-xs-pbs{padding-bottom: $spacer-s !important; }
+
+  .u-xs-mtm{margin-top: $spacer-m !important;}
 }
 
 /*
