--- a/sass/utils/_spacing.scss
+++ b/sass/utils/_spacing.scss
@@ -105,11 +105,15 @@
 
 @media only screen and (max-width: 425px){
 
-  .u-xs-ptn{padding-top:none;}
+  .u-xs-ptn{padding-top:0px !important; }
 
   .u-xs-pbs{padding-bottom: $spacer-s !important; }
 
   .u-xs-mtm{margin-top: $spacer-m !important;}
+  .u-xs-mtn{margin-top:0px !important;  }
+
+  .u-xs-mln{margin-left:0px !important;  }
+
 }
 
 /*
