add the uploder / login / register page

--- a/assets/css/app.css
+++ b/assets/css/app.css
@@ -2131,6 +2131,32 @@ img {
     display: none !important;
   }
 }
+/** ======================================
+ * Component : List
+ * ======================================= */
+/* line 5, ../../sass/components/_list.scss */
+.listReset {
+  margin-bottom: 0;
+  margin-top: 0;
+  padding-left: 0;
+  list-style: none;
+}
+
+/* line 9, ../../sass/components/_list.scss */
+.listInline {
+  padding-left: 0;
+  margin: 0;
+}
+/* line 12, ../../sass/components/_list.scss */
+.listInline > li {
+  display: inline-block;
+  vertical-align: middle;
+}
+/* line 15, ../../sass/components/_list.scss */
+.listInline > li + li {
+  margin-left: 0.3125rem;
+}
+
 /* line 1, ../../sass/components/gallery/_block.scss */
 .gallery-block {
   background-color: transparent;
@@ -2824,7 +2850,7 @@ hr {
 * Display
 */
 /* line 138, ../../sass/utils/_spacing.scss */
-.u-db-ma {
+.u-db-ma, .u-dbma {
   display: block;
   margin: auto;
 }
@@ -2884,17 +2910,22 @@ hr {
   box-shadow: 0 8px 17px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
 }
 
-/* line 4, ../../sass/website/_hp.scss */
+/* line 9, ../../sass/utils/_shadows.scss */
+.u-shadowL {
+  box-shadow: 10px 10px 14px 1px rgba(0, 0, 0, 0.2);
+}
+
+/* line 3, ../../sass/website/_hp.scss */
 .header h1 {
   color: #2980b9;
   font-size: 42px;
 }
-/* line 9, ../../sass/website/_hp.scss */
+/* line 8, ../../sass/website/_hp.scss */
 .header p {
   font-size: 20px;
   font-weight: 200;
 }
-/* line 14, ../../sass/website/_hp.scss */
+/* line 13, ../../sass/website/_hp.scss */
 .header input {
   border-radius: 4px !important;
   border: 1px solid #DBDBDB !important;
@@ -2903,18 +2934,18 @@ hr {
   padding-left: 10px;
 }
 @media only screen and (max-width: 425px) {
-  /* line 24, ../../sass/website/_hp.scss */
+  /* line 23, ../../sass/website/_hp.scss */
   .header p {
     font-size: 15px;
   }
-  /* line 26, ../../sass/website/_hp.scss */
+  /* line 27, ../../sass/website/_hp.scss */
   .header input {
     width: 100%;
     font-size: 13px;
   }
 }
 
-/* line 32, ../../sass/website/_hp.scss */
+/* line 36, ../../sass/website/_hp.scss */
 h2 {
   margin: 0 0 1.625rem 0;
   font-family: Helvetica, sans-serif;
@@ -2923,4 +2954,48 @@ h2 {
   color: #4a4a4a;
   text-rendering: optimizeLegibility;
   font-size: 22px;
+}
+
+/* line 46, ../../sass/website/_hp.scss */
+h1 {
+  font-family: Helvetica;
+  font-size: 40px;
+  color: #5A5A5A !important;
+  font-weight: 200;
+}
+
+/* FORM */
+/* line 56, ../../sass/website/_hp.scss */
+textarea {
+  width: 100%;
+}
+
+/* line 60, ../../sass/website/_hp.scss */
+.form-group label {
+  display: block;
+}
+
+/* line 65, ../../sass/website/_hp.scss */
+.form-group {
+  width: 60%;
+  display: block;
+  margin: auto;
+}
+
+/* line 71, ../../sass/website/_hp.scss */
+input, textarea {
+  border-radius: 4px !important;
+  border: 1px solid #DBDBDB !important;
+  width: 100%;
+  padding-left: 10px;
+}
+
+/* line 78, ../../sass/website/_hp.scss */
+input {
+  height: 60px;
+}
+
+/* line 82, ../../sass/website/_hp.scss */
+textarea {
+  height: 100px;
 }
