--- a/sass/app.scss
+++ b/sass/app.scss
@@ -28,7 +28,7 @@
 // ===================================================
 
 @import "libs/bootstrap.scss";
-// @import "components/list";
+@import "components/list";
 // @import "components/typo";
 // @import "components/msg";
 // @import "components/videoWrapper";
