--- a/sass/utils/_shadows.scss
+++ b/sass/utils/_shadows.scss
@@ -5,3 +5,7 @@
 .u-shadowM{
   box-shadow: 0 8px 17px 0 rgba(0,0,0,.2),0 6px 20px 0 rgba(0,0,0,.19);
 }
+
+.u-shadowL{
+  box-shadow: 10px 10px 14px 1px rgba(00,00,00,0.2);
+}
