--- a/sass/utils/_spacing.scss
+++ b/sass/utils/_spacing.scss
@@ -135,7 +135,8 @@ hr {border-color: rgba(224, 224, 224, 0.19);}
 * Display
 */
 
-.u-db-ma{
+.u-db-ma,.u-dbma{
   display: block;
   margin: auto;
 }
+
